--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="한입 POS - Bitcoin Lightning POS System">
     <meta property="og:description" content="Bitcoin Lightning 네트워크를 지원하는 현대적인 POS 시스템. 실시간 비트코인 결제, 직관적인 인터페이스, 안전한 거래를 제공합니다.">
-    <meta property="og:image" content="/thumbnail.svg">
+    <meta property="og:image" content="https://cdn.pixabay.com/photo/2018/03/26/19/17/bitcoin-3263691_1280.jpg">
     <meta property="og:url" content="https://pos.onebitebitcoin.com">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="한입 POS - Bitcoin Lightning POS System">
     <meta property="twitter:description" content="Bitcoin Lightning 네트워크를 지원하는 현대적인 POS 시스템. 실시간 비트코인 결제, 직관적인 인터페이스, 안전한 거래를 제공합니다.">
-    <meta property="twitter:image" content="/thumbnail.svg">
+    <meta property="twitter:image" content="https://cdn.pixabay.com/photo/2018/03/26/19/17/bitcoin-3263691_1280.jpg">
     
     <!-- Theme -->
     <meta name="theme-color" content="#f59e0b">
